<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1D000000"/>

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:src="@drawable/icon" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/app_font_2"
            android:paddingStart="16dp"
            android:shadowColor="#74000000"
            android:shadowDx="1.7"
            android:shadowDy="1.7"
            android:shadowRadius="1.6"
            android:text="@string/terms_of_use"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/second_check"
        android:layout_below="@+id/top"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/app_font_2"
                android:shadowColor="#A3000000"
                android:shadowDx="1.7"
                android:shadowDy="1.7"
                android:shadowRadius="1.6"
                android:text="@string/privacy"
                android:textColor="@color/textColor"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <CheckBox
        android:id="@+id/second_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/termtextview"
        android:buttonTint="@color/textColor"
        android:layout_marginHorizontal="16dp"
        android:checked="false"
        android:fontFamily="@font/app_font_2"
        android:shadowColor="#74000000"
        android:shadowDx="1.7"
        android:shadowDy="1.7"

        android:shadowRadius="1.6"
        android:text="@string/second_check"
        android:textColor="@color/textColor"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/termtextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom"
        android:fontFamily="@font/app_font_2"
        android:gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:shadowColor="#74000000"
        android:shadowDx="1.7"
        android:shadowDy="1.7"
        android:shadowRadius="1.6"
        android:text="@string/click_for_privacy"
        android:textColor="@color/textColor"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/accept_button"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/chatReceive"
            android:fontFamily="@font/app_font_2"
            android:gravity="center"
            android:shadowColor="#5E000000"
            android:shadowDx="1.7"
            android:shadowDy="1.7"
            android:alpha="0.7"
            android:shadowRadius="1.6"
            android:text="@string/agree_and_start"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>