<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <ImageView
            android:id="@+id/img_caller"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:src="@drawable/icon"
            android:visibility="gone" />

    </RelativeLayout>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/app_font_2"
        android:gravity="center"
        android:text="@string/Chat_name"
        android:textColor="#ffffff"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/num_hero_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/app_font_2"
        android:gravity="center"
        android:text="@string/NumberPhone"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="22sp"
        android:fontFamily="@font/app_font_2"
        android:gravity="center"
        android:text="@string/incoming_video_call"
        android:textColor="#fff"
        android:textSize="26sp"
        android:textStyle="bold" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/video_refuse"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="52dp"
            android:layout_marginBottom="50dp"
            android:src="@drawable/call_ic_refuse_call" />

        <ImageView
            android:id="@+id/video_accept"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="52dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="50dp"
            android:src="@drawable/call_ic_accept_call" />

    </RelativeLayout>


</LinearLayout>