<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bg_boy"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/app_background"
        android:visibility="gone" />

    <TextView
        android:id="@+id/welcome_boy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/big_texts_font"
        android:gravity="center"
        android:shadowColor="#8B000000"
        android:shadowDx="1.4"
        android:shadowDy="1.4"
        android:shadowRadius="1.6"
        android:text="@string/welcome"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/boy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/big_texts_font"
            android:gravity="center"
            android:shadowColor="#8B000000"
            android:shadowDx="1.4"
            android:shadowDy="1.4"
            android:shadowRadius="1.6"
            android:text="@string/boy"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="45sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:shadowColor="#32000000"
            android:shadowDx="1.4"
            android:shadowDy="1.4"
            android:shadowRadius="1.6"
            android:text=" 😎"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="45sp"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/continueBTN_boy"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:visibility="gone"
        app:cardBackgroundColor="@color/accentColor_2"
        app:cardCornerRadius="@dimen/radius_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/boy">

        <RelativeLayout
            android:id="@+id/continueBTNHolder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/dashed_stroke_alpha" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/big_texts_font"
            android:shadowColor="#8B000000"
            android:shadowDx="1.4"
            android:shadowDy="1.4"
            android:shadowRadius="1.6"
            android:text="@string/continue_"
            android:textAllCaps="true"
            android:textColor="@color/textColor"
            android:textSize="25sp" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>